--- a/css/app.css
+++ b/css/app.css
@@ -1,51 +1,64 @@
-h2 {
+body {
   font-family:'Lato', sans-serif;
-  color:white;
-  margin-top: 50px;
+/*  background: #1fc3f8;*/
+  background: #314146;
+/*  text-align: center;*/
+/*  min-height: 100%;
+  max-height: 100%;*/
 }
+.btn-warning {
+  background-color: #DB8100;
+}
+form select {
 
+}
+h1 {
+  color:white;
+/*  margin-top: 50px;*/
+}
+#title {
+  margin-top: 50px;
+  margin-bottom:50px;
+}
 .hero-unit {
-  font-family:'Lato', sans-serif;
-  /*border: 1px solid black;*/
   -moz-box-shadow: 0px 0px 7px 2px #333333;
   -webkit-box-shadow: 0px 0px 7px 2px #333333;
   box-shadow: 0px 0px 7px 2px #333333;
-  background-image:url('../img/gradient.jpg');
-  background-position: center;
-  /*max-height: 380px;*/
+/*  background-image:url('../img/gradient.jpg');*/
+/*  background-position: center;*/
   height: auto;
   padding-top: 8px;
   padding-bottom: 20px;
 }
-body {
-  background: #1fc3f8;
-  /*#fd4a4d  a blue color*/
-  text-align: center;
-  min-height: 100%;
-  max-height: 100%;
-}
 div.selectDiv {
   margin-bottom: 8px;
   display:block;
+  color: white;
 }
 a:hover {
   text-decoration: none;
 }
+
 #footer {
   border-top: 1px solid white;
 }
+
 h3 {
   margin:0 0 0 0;
 }
+
 .lead {
   margin-bottom: 0px;
 }
+
 form {
   max-height: 300px;
 }
+
 .ui-loading .ui-loader {
   display: block;
 }
+
 .ui-loader {
   display: none;
   position: absolute;
@@ -57,9 +70,11 @@ form {
   margin-top: -35px;
   padding: 10px 30px;
 }
+
 div.selectDiv span:nth-child(1) {
   display: none;
 }
+
 .hero-unit small {
-	font-size: 70%;
+  font-size: 70%;
 }
