--- a/css/app.css
+++ b/css/app.css
@@ -2,12 +2,10 @@ body {
   font-family:'Lato', sans-serif;
 /*  background: #1fc3f8;*/
   background: #314146;
-/*  text-align: center;*/
-/*  min-height: 100%;
-  max-height: 100%;*/
 }
 .btn-warning {
   background-color: #DB8100;
+  border-color: black;
 }
 form select {
 
@@ -24,14 +22,13 @@ h1 {
   -moz-box-shadow: 0px 0px 7px 2px #333333;
   -webkit-box-shadow: 0px 0px 7px 2px #333333;
   box-shadow: 0px 0px 7px 2px #333333;
-/*  background-image:url('../img/gradient.jpg');*/
-/*  background-position: center;*/
   height: auto;
   padding-top: 8px;
   padding-bottom: 20px;
 }
 div.selectDiv {
-  margin-bottom: 8px;
+  margin-bottom: 15px;
+  margin-top: 15px;
   display:block;
   color: white;
 }
